# college-final

./: .env.example  README.md  pyproject.toml  requirements.txt
backend/: check_schema.py  config.py  dependencies.py  main.py
backend/auth/: router.py  schemas.py  service.py
backend/clubs/: router.py  schemas.py  service.py
backend/events/: router.py  schemas.py  service.py
backend/registrations/: router.py  schemas.py  service.py
database/: schema.sql
frontend/: admin-dashboard.html  admin-login.html  create-event.html  event-detail.html  events.html  index.html  login.html  profile.html  register.html  student-dashboard.html
frontend/css/: style.css
frontend/js/: api.js  ui.js
