[project]
name = "event-portal"
version = "0.1.0"
description = "Multi-Club College Event Portal"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "supabase>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.1",
    "pydantic[email]>=2.10.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "websockets>=13.0",
]

[tool.uv]
dev-dependencies = []
